# bel_api

./: .bumpversion.cfg  .coveragerc  .dockerignore  .editorconfig  .gitignore  .readthedocs.yml  CHANGELOG.md  CHANGES.md  CONDUCT.md  CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPMENT.md  Dockerfile-bel_api  Dockerfile-docs  Dockerfile-ops  Makefile  NOTES.md  Pipfile  README.md  README.rst  belbio_conf.yml.example  belbio_secrets.yml.example  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-ops.txt  requirements.txt  requirements_dev.txt  traefik-dev.toml  traefik.toml
api/: Config.py  Config.yml.sample  __init__.py  __version__.py  app.py  conf-api.yml.example  conf_logging.yml.example  gunicorn.conf  gunicorn_conf.py  routes.py  swagger.yaml
api/common/: authentication.py  celery.py  jwt.py  mail.py  middleware.py
api/middleware/: falcon_exceptions.py  stats.py
api/models/: arangodb.py  es.py  es_mapping_term.yaml  setup_es.py
api/resources/: bel_lang.py  belspec.py  edges.py  nanopubs.py  orthology.py  pubmed.py  status.py  swagger.py  tasks.py  terms.py
api/services/: custom_logger.py  edges.py  orthology.py  pubmed.py  swaggerui.py  tasks.py  terms.py
app/: Config.py  __init__.py  __version__.py  gunicorn_conf.py  main.py  swagger.yaml  test.json
conf/: belbio_conf.yml.sample  belbio_secrets.yml.sample  dotenv.sample  elasticsearch.yml
docker/: Dockerfile-bel_api  Dockerfile-bel_api-dev  Dockerfile-bel_api-image  Dockerfile-bel_api-quickpush  Dockerfile-rq_dashboard  Dockerfile.dev  Dockerfile.prod  NOTES.md  belbio_conf.yml  belbio_conf_local_docker_image.yml  belbio_secrets.yml  conf-traefik.toml  docker-compose-image.yml  docker-compose.yml  elasticsearch.yml  nanopubstore.appsettings.json
docs/: CNAME  belbio_api.yaml  concept_types.html  configuration.html  contributors.html  dependencies.html  devops.html  genindex.html  glossary.html  index.html  index.md  install.html  link_conduct.html  link_contributing.html  misc_dev_notes.html  nginx.conf  nginx.cors.conf  objects.inv  py-modindex.html  related.html  requirements.html  search.html  searchindex.js  terms.md  troubleshooting.html  windows_dev_notes.html
make_docs/: belbio_api.yaml  index.md
sphinx/: Makefile  make.bat
tests/: nanopubs.json  pytest.ini  test_example.py  test_nanopubstore.py
(+70 files in other folders)
