[tool.poetry]
name = "bel_api"
version = "0.5.0"
description = "BEL (Biological Expression Language) API"
authors = ["William Hayes <william.s.hayes@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "*"
falcon = "1.4.1"
falcon-auth = "*"
falcon-cors = "*"
flower = "*"
gevent = "*"
greenlet = "*"
gunicorn = "*"
itsdangerous = "*"
json-logging-py = "*"
layeredconfig = "*"
passlib = "*"
python-arango = "*"
python-dateutil = "*"
python-json-logger = "*"
structlog = "*"
timy = "*"
ptvsd = "*"
PyJWT = "*"
celery = "*"# BEL module requirement - here for easier BEL->BELAPI dev
tatsu = "*"
falcon-swagger-ui = {git = "https://github.com/belbio/falcon-swagger-ui.git"}
ulid = "*"
click = "*"
jsonschema = "*"
cityhash = "*"
lxml = "*"
ndg-httpsclient = "*"
pyopenssl = "*"
"pyasn1" = "*"
httpx = "*"
bump2version = "^1.0.0"
flake8 = "^3.7.9"
cachetools = "^4.0.0"
bel = {git = "https://github.com/belbio/bel.git", branch = "develop"}  # 1
logging_tree = "^1.8.1"

[tool.poetry.dev-dependencies]
ptvsd = "*"
Pygments = "*"
Sphinx = "*"
jsonschema = "*"
pep8 = "*"
pyflakes = "*"
pytest = "*"
pytest-cache = "*"
pytest-cov = "*"
pytest-flakes = "*"
pytest-mock = "*"
pytest-pep8 = "*"
pytest-pythonpath = "*"
pytest-sugar = "*"
pytest-watch = "*"
requests = "*"
sphinx-autobuild = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-napoleon = "*"
twine = "*"
pylint = "*"


[tool.black]
line-length = 100
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''


[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=100

import_heading_stdlib="Standard Library"
import_heading_thirdparty="Third Party Imports"
import_heading_firstparty="Local Imports"

known_third_party = ["arango", "cityhash", "click", "dateutil", "elasticsearch", "jinja2", "jsonschema", "lxml", "requests", "requests_cache", "setuptools", "sphinx_rtd_theme", "structlog", "tatsu", "timy", "ulid", "yaml"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
